tests/paczka1/small_fuzzy/67502921.err
Error in line 4: FVBNJ A681 15,6
Error in line 12: ?A70
Error in line 14: S313 A681 21,42
